Bug 692382 - MuPDF can no longer open UnicodeStandard-6.0.pdf
Summary: MuPDF can no longer open UnicodeStandard-6.0.pdf
Status: RESOLVED FIXED
Alias: None
Product: MuPDF
Classification: Unclassified
Component: mupdf (show other bugs)
Version: unspecified
Hardware: Other Linux
: P4 critical
Assignee: Robin Watts
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-28 21:49 UTC by av1474
Modified: 2014-02-17 04:44 UTC (History)
2 users (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 Robin Watts 2011-07-29 14:56:05 UTC
Fixed in:

commit 684cd3ebbbeaffbf416a09aad6af2cb160cec6bb
Author: Robin Watts <Robin.Watts@artifex.com>
Date:   Fri Jul 29 14:22:29 2011 +0100

    Bug 692382: Fix typo that broke encryption support.

    Not quite sure how this one slipped through - must add encrypted documents
    to the mupdf test suite.

Thanks.