Bug 692382: Fix typo that broke encryption support.

Not quite sure how this one slipped through - must add encrypted documents
to the mupdf test suite.